#changed the text from placeholder line 750

--- a/barber-master/index.html
+++ b/barber-master/index.html
@@ -747,8 +747,8 @@
               <h2 class="h2 section-title">Make Appointment</h2>
 
               <p class="section-text">
-                Sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt labore dolore magna aliqua
-                suspendisse
+                Ready for a fresh look? Book your appointment now and let our expert barbers take care of the rest. 
+                Walk-ins welcome, but reservations get priority!
               </p>
 
               <form action="" class="appoin-form">
