changed the prices from pesos to dollars for better appearance

--- a/barber-master/index.html
+++ b/barber-master/index.html
@@ -450,7 +450,7 @@
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="150">150 Pesos only</data>
+                  <data class="card-price" value="35">$35</data>
 
                 </div>
               </li>
@@ -469,7 +469,7 @@
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="100">100 Pesos only</data>
+                  <data class="card-price" value="25">$25</data>
 
                 </div>
               </li>
@@ -488,7 +488,7 @@
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="500">500 Pesos only</data>
+                  <data class="card-price" value="60">$60</data>
 
                 </div>
               </li>
@@ -507,7 +507,7 @@
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="200">200 Pesos only</data>
+                  <data class="card-price" value="45">$45</data>
 
                 </div>
               </li>
@@ -526,7 +526,7 @@
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="300">300 Pesos only</data>
+                  <data class="card-price" value="35">$35</data>
 
                 </div>
               </li>
@@ -545,7 +545,7 @@
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="250">250 Pesos only</data>
+                  <data class="card-price" value="25">$25</data>
 
                 </div>
               </li>
@@ -564,7 +564,7 @@
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="350">350 Pesos only</data>
+                  <data class="card-price" value="35">$35</data>
 
                 </div>
               </li>
@@ -583,7 +583,7 @@
                     <p class="card-text">Clean & simple 30-40 minutes</p>
                   </div>
 
-                  <data class="card-price" value="350">350 Pesos only</data>
+                  <data class="card-price" value="40">$40</data>
 
                 </div>
               </li>
